# onnxconformal

./: .gitignore  Cargo.toml  README.md  calib.json  calib.jsonl  calib_regr.json  intervals.jsonl  sets.jsonl
.github/workflows/: ci.yml
examples/: class_scores.jsonl  regr_calib.jsonl  regr_preds.jsonl
src/: calibrator.rs  lib.rs  main.rs  nonconformity.rs  onnx.rs  predictor.rs  text.rs  utils.rs
tests/: calibrate_class_mondrian_test.rs  calibrate_reader_test.rs  calibrate_test.rs  integration_examples.rs  integration_non_onnx_test.rs  onnx_identity_test.rs  predict_class_include_probs_test.rs  predict_mondrian_test.rs  predict_test.rs  utils_test.rs
