[package]
name = "onnxconformal-rs"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Conformal prediction sets/intervals for classification & regression (Rust CLI)."

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ordered-float = "4"
ort = { version = "2.0.0-rc.10", optional = true }
tokenizers = { version = "0.15", optional = true }

[features]
# Placeholder for future ONNX inference (ort crate). Off by default.
onnx = ["dep:ort"]
# Optional text tokenization (Hugging Face tokenizers)
text = ["dep:tokenizers"]
